<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/addentry_actv_addTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:hint="title"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalAboveCategory"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveTitle" />

    <AutoCompleteTextView
        android:id="@+id/addentry_actv_addCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:hint="category"
        android:lines="1"
        android:maxLength="20"
        android:maxLines="1"
        android:tooltipText="Characters not allowed: ; "
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBelowCategory"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalBelowTitle" />


    <EditText
        android:id="@+id/addentry_actv_addDescription"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:hint="description"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLength="400"
        android:maxLines="10"
        android:minLines="6"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBelowDescription"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveDescription" />

    <EditText
        android:id="@+id/addentry_actv_addSource"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:hint="source"
        android:inputType="textWebEmailAddress"
        android:lines="2"
        android:maxLength="200"
        android:maxLines="3"
        android:minHeight="32dp"
        android:minLines="2"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBelowSource"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveSource" />

    <Button
        android:id="@+id/addentry_btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/black"
        android:text="@string/addentry_btn_addentry"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBelowButtons"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalAboveButtons" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAboveTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBelowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAboveCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBelowCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAboveDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBelowDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAboveSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBelowSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAboveButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBelowButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />


</androidx.constraintlayout.widget.ConstraintLayout>